--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.8
   pin_code_fields: ^8.0.1
   flutter_riverpod: ^3.0.3
+  flutter_secure_storage: ^9.2.4
+  dio: ^5.9.0
+  logger: ^2.6.2
+  get_it: ^8.2.0
 
 dev_dependencies:
   flutter_test:
