feat(security): integrate local_auth and implement security setup
- Installed `local_auth` package for biometric authentication
- Added `SecuritySetupScreen` for configuring PIN and biometrics
- Created `security_service.dart` to handle local security logic
- Added `security_service_provider.dart` for dependency injection and state management

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,15 +7,17 @@
     ".idea": true,
     ".flutter-plugins-dependencies": true,
     ".metadata": true,
-    "build": true,
-    // "analysis_options.yaml": true,
+    "**/.kotlin": true,
+    "**/build": true,
+    "analysis_options.yaml": true,
     "obywatel_app.iml": true,
     "ios": true,
     "linux": true,
     "macos": true,
     "web": true,
     "windows": true,
-    "test": true
+    "test": true,
+    // "android": true
   },
 
   // (Search)
@@ -24,14 +26,25 @@
     ".idea": true,
     ".flutter-plugins-dependencies": true,
     ".metadata": true,
-    "build": true,
-    // "analysis_options.yaml": true,
+    "**/.kotlin": true,
+    "**/build": true,
+    "analysis_options.yaml": true,
     "obywatel_app.iml": true,
     "ios": true,
     "linux": true,
     "macos": true,
     "web": true,
     "windows": true,
-    "test": true
+    "test": true,
+    "pubspec.lock": true,
+    "pubspec.yaml": true,
+    "README.md": true,
+    ".gitattributes": true,
+    ".gitignore": true,
+    "obywatel_app.code-workspace": true,
+    ".vscode": true,
+    "docs": true,
+    "android": true,
+    // "android": true,
   }
 }
