--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   get_it: ^8.2.0
   go_router: ^16.2.5
   argon2: ^1.0.1
+  local_auth: ^3.0.0
 
 dev_dependencies:
   flutter_test:
